fix: fix class load bug and some code